--- a/expensee_tracker/package.json
+++ b/expensee_tracker/package.json
@@ -11,7 +11,7 @@
     "using",
     "express"
   ],
-  "author": "rajesh",
+  "author": "sree",
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2"
